# django-tutorial

./: README.md  pyproject.toml
src/django_tutorial/my_site/: settings.py  urls.py
src/django_tutorial/polls/: views.py
src/djangotutorial/mysite/: settings.py
